--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,15 @@
 /Help/nbproject/private/
 /Help/build/
 /Help/dist/
+/Dog/nbproject/private/
+/Dog/build/
+/Dog/dist/
+/Chapter6/nbproject/private/
+/Chapter6/build/
+/overload/nbproject/private/
+/overloadDemo/nbproject/private/
+/Volume/nbproject/private/
+/volumeSphere/nbproject/private/
+/VolumeMenu/nbproject/private/
+/VolumeMenu/build/
+/VolumeMenu/dist/
